--- a/LoE-Launcher/packages.config
+++ b/LoE-Launcher/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Nito.AsyncEx" version="3.0.0" targetFramework="net45" />
+  <package id="NLog" version="4.4.4" targetFramework="net45" />
+  <package id="NLog.Config" version="4.4.4" targetFramework="net45" />
+  <package id="NLog.Schema" version="4.4.4" targetFramework="net45" />
 </packages>
