--- a/LoE-Launcher_Old/LoE-Launcher_Old.csproj
+++ b/LoE-Launcher_Old/LoE-Launcher_Old.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LoE_Launcher</RootNamespace>
-    <AssemblyName>LoE-Launcher</AssemblyName>
+    <AssemblyName>LoE-Launcher_Old</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
