--- a/LoE-Launcher/LoE-Launcher.csproj
+++ b/LoE-Launcher/LoE-Launcher.csproj
@@ -34,6 +34,8 @@
 
     <ItemGroup>
         <AvaloniaResource Include="Assets\Gear.png" />
+        <AvaloniaResource Include="Assets\Default-Background.png" />
+        <AvaloniaResource Include="Assets\Logo.png" />
     </ItemGroup>
     
 </Project>
