--- a/LoE-Launcher/LoE-Launcher.csproj
+++ b/LoE-Launcher/LoE-Launcher.csproj
@@ -6,6 +6,7 @@
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+        <RootNamespace>LoE_Launcher</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
