--- a/LoE-Launcher/LoE-Launcher.csproj
+++ b/LoE-Launcher/LoE-Launcher.csproj
@@ -7,6 +7,7 @@
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
         <RootNamespace>LoE_Launcher</RootNamespace>
+        <ApplicationIcon>Assets\Icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
